--- a/README
+++ b/README
@@ -8,13 +8,14 @@ How to start:
 
 1. Install JRE 11+ and latest Maven build tool on your system
 2. Clone this repository
-3. In root directory (.../MasterThesis/), execute command "mvn clean install -Dcheckstyle.skip -DskipTests". It will build the whole project.
+3. In root directory (.../MasterThesis/), execute command "mvn install:install-file -DlocalRepositoryPath=thirdPartyLib -DcreateChecksum=true -Dpackaging=jar -Dfile=thirdPartyLib/clp-java-1.16.11-full.jar -DgroupId=com.quantego -DartifactId=clp -Dversion=1.16.11". It will install Java-CLP to local mvn repository
+3. In root directory (.../MasterThesis/), execute command "mvn clean install -Dcheckstyle.skip -DskipTests -U". It will build the whole project.
 4. Prepared HallwayGame examples can be found in .../MasterThesis/HallwayGame/src/main/java/vahy/solutionExamples/ path
-5. To execute some prepared example, in directory "../MasterThesis/HallwayGame/" execute command "mvn exec:java -Dexec.mainClass="vahy.solutionExamples.<name of the class with main() to be executed>""
+5. To execute some example, in directory "../MasterThesis/HallwayGame/" execute command "mvn exec:java -Dexec.mainClass="vahy.solutionExamples.<name of the class with main() to be executed>""
     - example: "mvn exec:java -Dexec.mainClass="vahy.solutionExamples.Benchmark01Solution""
-
+    - the algorithm parameters and hyper-parameters are not necessarily optimal
 6. The training will start. For some benchmarks, it can take time.
-7. When a logging is set to "Info" level (it is by default), three windows will pop up showing training performance over time.
+7. When a logging is set to "Info" level (it is by default, check logback.xml for detailed logging), three windows will pop up showing training performance over time.
 8. After evaluation is done, results are printed into info level log.
 
 if encountering any problems, please, contact me on snurkabill@gmail.com
